kubernetes/deployment-nginx-ingress-controller.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress-controller-svc
  namespace: #{namespacePrefix}#-#{environmentName}#
  labels:
    app: nginx-ingress
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: nginx-ingress
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      hostNetwork: false
      containers:
        - name: nginx-ingress-controller
          image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.17.1"
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          imagePullPolicy: "IfNotPresent"
          args:
            - /nginx-ingress-controller
            - --default-backend-service=default/default-http-backend
            - --publish-service=#{namespacePrefix}#-#{environmentName}#/nginx-ingress-controller-svc
