kubernetes/pod-function.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfunction-deployment
  labels:
    app: myfunction-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myfunction-frontend
  template:
    metadata:
      labels:
        app: myfunction-frontend
    spec:
      containers:
      - name: myfunction-frontend
        image: #{containerRegistry}#.azurecr.io/functionsplatform:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myfunction-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: myfunction-frontend
