kubernetes/pod-sentiment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theatreers-sentiment-deployment
  labels:
    app: theatreers-sentiment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theatreers-sentiment
  template:
    metadata:
      labels:
        app: theatreers-sentiment
    spec:
      containers:
      - name: theatreers-sentiment
        image: mcr.microsoft.com/azure-cognitive-services/sentiment
        ports:
        - containerPort: 5000
        args:
        - "Eula=accept"
        - "Billing=#{bilingEndpoint}#"
        - "Apikey=#{sentimentApiKey}#"
---
apiVersion: v1
kind: Service
metadata:
  name: theatreers-sentiment-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: theatreers-sentiment
