kubernetes/theatreers.company.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theatreers-company-deployment
  labels:
    app: theatreers-company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theatreers-company
  template:
    metadata:
      labels:
        app: theatreers-company
    spec:
      containers:
      - name: theatreers-company
        image: #{containerRegistry}#.azurecr.io/#{imageName}#:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            cpu: 125m
            memory: 250Mi
          requests:
            cpu: 75m
            memory: 150Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: theatreers-company-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: theatreers-company
