kubernetes/ingress-theatreers.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: theatreers-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: dev-theatreers-com-tls
    hosts:
    - dev.theatreers.com
    - function.dev.theatreers.com  
  - secretName: api-dev-theatreers-com-tls
    hosts:
    - api.dev.theatreers.com
  rules:
  - host: dev.theatreers.com
    http:
      paths:
      - backend:
          serviceName: theatreers-frontend-svc
          servicePort: 80
        path: /
  - host: api.dev.theatreers.com
    http:
      paths:
      - backend:
          serviceName: theatreers-showapi-svc
          servicePort: 80
        path: /shows
  - host: api.dev.theatreers.com
    http:
      paths:
      - backend:
          serviceName: theatreers-sentiment-svc
          servicePort: 80
        path: /
  - host: function.dev.theatreers.com
    http:
      paths:
      - backend:
          serviceName: myfunction-svc
          servicePort: 8080
        path: /
