kubernetes/theatreers.frontend.ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: theatreers-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: 1200
    nginx.ingress.kubernetes.io/proxy-send-timeout: 1200
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: dev-theatreers-com-tls
    hosts:
    - dev.theatreers.com
  rules:
  - host: dev.theatreers.com
    http:
      paths:
      - backend:
          serviceName: theatreers-frontend-svc
          servicePort: 80
        path: /
