kubernetes/theatreers.production.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: theatreers-production-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: 1200
    nginx.ingress.kubernetes.io/proxy-send-timeout: 1200
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: api-dev-theatreers-com-tls
    hosts:
    - api.dev.theatreers.com
  rules:
  - host: api.dev.theatreers.com
    http:
      paths:
      - backend:
          serviceName: theatreers-production-svc
          servicePort: 80
        path: /productions
