kubernetes/theatreers.show.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: theatreers-show-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: 1200
    nginx.ingress.kubernetes.io/proxy-send-timeout: 1200
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://dev.theatreers.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
  - secretName: api-dev-theatreers-com-tls
    hosts:
    - api.dev.theatreers.com
  rules:
  - host: api.dev.theatreers.com
    http:
      paths:
      - backend:
          serviceName: theatreers-show-svc
          servicePort: 80
        path: /shows
